# muia_tfm

./: .hgignore  .hgsub  .hgsubstate  LICENSE.md  README.md
data/samples/: dot2png.py  sample01.csv  sample01.txt  sample02.csv  sample02.txt  sample03.csv  sample03.txt  sample04.csv  sample04.txt  sample05.csv  sample05.txt  sample06.csv  sample06.txt  sample07.csv  sample07.txt  sample08.csv  sample08.txt  sample09.csv  sample09.txt  sample10.csv  sample10.txt  work_samples.bat  working.bat
data/samples/sample03-brief/: sussna-synset_tol-00.dot  sussna-synset_tol-09.dot
doc/: 0.intro.rst  Makefile  abstract.rst  acknowledgements.rst  appendix-data.rst  conf.py  dedication.rst  index.rst  intro.rst  make.bat  refs.bib  resumen.rst  sphinx.sty  zreferences.rst
doc/1.state-of-the-art/: i.representacion-conocimiento.rst  ii.medidas-distancia.rst  iii.distancia-semantica.rst  index.rst  iv.evaluacion-traducciones.rst  v.problemas-combinatorios.rst
doc/2.problem/: index.rst
doc/3.hypothesis/: index.rst
doc/4.model/: i.recursos.rst  ideas.rst  ii.modelo.rst  index.rst
doc/5.pruebas/: index.rst
doc/6.conclusion/: index.rst
doc/_build/latex/: MedidadedistanciaengrafosUNL.tex  sphinx.sty
doc/appendix-data/: 1.oraciones.rst  2.unl_original.rst  3.unl_work.rst  4.graph_original.rst  5.translations.rst  6.graph_google.rst  7.graph_yandex.rst  sample01.rst  sample02.rst  sample03.rst  sample04.rst  sample05.rst  sample06.rst  sample07.rst  sample08.rst  sample09.rst  sample10.rst
doc/examples/: bibliography.rst  graph01.dot  graphviz.rst  image.rst  index.rst  math.rst
doc/extensions/: README.txt  latex_mods.py
doc/i.state-of-the-art/: conceptual-graph.rst  distancia-semantica.rst  equiparacion-grafos.rst  i.grafos-conceptuales.rst  i.i.semantica-estructural.rst  i.ii.grafos-conceptuales.rst  i.representacion-conocimiento.rst  ii.i.comparacion-grafos.rst  ii.ii.distancia-semantica-conceptos.rst  ii.medidas-de-distancia.rst  ii.medidas-distancia.rst  iii.distancia-semantica-grafos-conceptuales.rst  iii.distancia-semantica.rst  iii.i.fenomenos-linguisticos.rst  iii.ii.modelos-propuestos.rst  index.rst  iv.evaluacion-traducciones.rst  iv.problemas-combinatorios.rst  medidas-similaridad.rst  parafrasis.rst  v.problemas-combinatorios.rst
doc/ii.problem/: index.rst
doc/iii.hypothesis/: index.rst
doc/iv.model/: index.rst
doc/state-of-the-art/: index.rst
doc/tex/: preamble._tex
graphs/: summarySE.R  sussna_edge_weight.R  work_sample.R
src/: CMakeLists.txt
src/concept/: distance.h  synset.h
src/conceptual_graph/: CMakeLists.txt  conceptual_graph.cpp  conceptual_graph.h  conceptual_graph_data.h  mcgregor_common_subgraphs.cpp  mcgregor_common_subgraphs.h  mcs_callback_print.h  mcs_callback_store.h  relation.h  unl_graph.cpp  unl_graph.h  unl_relation.cpp  unl_relation.h
src/corpus/: CMakeLists.txt  corpus.cpp  corpus.h  semcor.cpp  semcor.h
src/distance/: CMakeLists.txt  depth_relative.cpp  depth_relative.h  distance.cpp  distance.h  distance_jiang_conrath.cpp  distance_jiang_conrath.h  distance_leacock_chodorow.cpp  distance_leacock_chodorow.h  distance_lin.cpp  distance_lin.h  distance_resnik.cpp  distance_resnik.h  distance_sussna.cpp  distance_sussna.h  distance_wu_palmer.cpp  distance_wu_palmer.h  information_based.cpp  information_based.h  shortest_path.cpp  shortest_path.h  synset.h
src/distance_graph/: CMakeLists.txt  graph_distance.cpp  graph_distance.h  mcs.cpp  mcs.h  mine.cpp  mine.h
src/distance_relation/: CMakeLists.txt  distance_relation.cpp  distance_relation.h  distance_relation_unl.cpp  distance_relation_unl.h
src/distance_synset/: CMakeLists.txt  depth_relative.cpp  depth_relative.h  distance.cpp  distance.h  distance_jiang_conrath.cpp  distance_jiang_conrath.h  distance_leacock_chodorow.cpp  distance_leacock_chodorow.h  distance_lin.cpp  distance_lin.h  distance_resnik.cpp  distance_resnik.h  distance_sussna.cpp  distance_sussna.h  distance_wu_palmer.cpp  distance_wu_palmer.h  information_based.cpp  information_based.h  shortest_path.cpp  shortest_path.h
src/ex_conceptual_graph/: CMakeLists.txt  main.cpp
src/ex_graph_distance/: CMakeLists.txt  main.cpp
src/ex_semcor/: CMakeLists.txt  main.cpp
src/ex_similarity/: CMakeLists.txt  main.cpp
src/graph_distance/: CMakeLists.txt  graph_distance.cpp  graph_distance.h  mcs.cpp  mcs.h  mine.cpp  mine.h
src/wordnet/: CMakeLists.txt  hyperonym_graph.cpp  hyperonym_graph.h  synset.h  wordnet.cpp  wordnet.h
src/work_debug/: CMakeLists.txt  main.cpp
src/work_dir/: CMakeLists.txt  main.cpp
src/work_sample/: CMakeLists.txt  main.cpp  sample_file.cpp  sample_file.h  utils.h
